@@ -16,7 +16,7 @@
                 Return to Main
             </a>
             <h1>
-                JFocus File Viewing Page!
+                JFocus Universal Navigator!
             </h1>
             <p>
                 Click on the desired destination file to be navigated to that page. The menu will not appear on the files, and you will have to go back to this page or the main page manually.
