@@ -8,6 +8,9 @@
             <a href = "main.html" class = "sourceCodeDark centerObj">
                 Return to Main
             </a>
+            <h1>
+                Change Log ⏱️📝
+            </h1>
             <object data="other/changeLog.txt" type="text/plain" height="1000000px" width="1000px">
             </object>
         </article>
