@@ -14,8 +14,7 @@
             </p>
             <div class = "flexArticleInverse">
                 <a href = "JFocus.html" class = "sourceCodeEmoji centerObj">
-                    JFocus Universal Viewer (Under Construction, Priority)
-                    <p class = "postletter">(This button's href changes)</p>
+                    JFocus Universal Navigator
                 </a>
                 <a href = "changeLog.html" class = "sourceCodeEmoji centerObj">
                     Change Log ⏱️📝
