@@ -71,6 +71,7 @@ Nov 20th PU22 (Peter) - JFocus2 Update V4
 Nov 20th PU23 (Peter) - File allocation changed
 Nov 20th PU24 (Peter) - File size change
 
+Nov 20th PU25 (Peter) - Main and JFocus File redirect changed with the Change Log recieving a slight update
 
 
 
